Changes in version 1.8.0

Changes in version 1.7.5

BUG FIXES and IMPROVEMENTS

- Meilleure position de la source lors de l'appel de la fonction add_source.
- Suppression de la syntaxe +init=epsg:XXXX (deprecated) au profit de la valeur numerique du code EPSG.
- Suppression d'un bug pour plot_typo_symboles quand xlim et ylim sont NULL.

Changes in version 1.7.4

BUG FIXES and IMPROVEMENTS

- Pour la fonction plot_ronds, correction d'un bug qui empechait de visualiser les ronds de volume négatif (autre couleur).
- Pour la fonction leaflet_ronds_classes, correction d'un bug qui inversait les valeurs des classes si des volumes correspondant étaient identiques.

FEATURES

- Possibilite d'ajouter un cadre blanc autour de toutes les legendes et de personnaliser sa taille.

Changes in version 1.7.3

BUG FIXES and IMPROVEMENTS

- Correction d'un bug dans la fonction plot_typo_symbole.
- Amélioration de l'affichage de la carte.
- Depend R >= 3.3.0

Changes in version 1.7.2

FEATURES

- Pour les fonctions plot_, ajout d'un cadre blanc autour des legendes des classes.

BUG FIXES and IMPROVEMENTS

- Adaptation du CRS des fonds DOM et suite à la maj de RSpatial et sf.

Changes in version 1.7.1

BUG FIXES and IMPROVEMENTS
- Nouvelle numerotation du package. 1er et 2eme chiffre = versions. 3eme chiffre = release.
- Pour les fonctions plot_classes, plot_ronds_classes, plot_classes_ronds et plot_typo, reduction de la taille de la legende des classes lorsque les paramètres xlim et ylim sont renseignés pour zoomer sur une maille.


Changes in version 1.0.7

BUG FIXES and IMPROVEMENTS

- Adapatation du code pour la montee de version du package sf 0.9.0.
- Mise a jour de la documentation realisee avec Roxygen2.


Changes in version 1.0.6

FEATURES
